# esame2020

./: CMakeLists.txt  README.md  checkComma.hpp  epidemic.cpp  epidemic.hpp  epidemic.test.cpp  epidemic3.hpp  exp.cpp  functions.h  functions.hpp  functions.test.cpp  graph.cpp  gui  gui.cpp  gui3.cpp  main.cpp  modifiche-sir.txt  prova.cpp  relazione.txt  sfml.h  sfml.hpp  sfml.test.cpp  trend.txt
